--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="rgb(23, 23, 23)">
 
-     <!--Boostrap link css-->
-     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="shortcut icon" href="assets/img/samuel.ico" type="image/x-icon">
     <title>Samuel Nicolau | Desenvolvedor Front End</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- Fonte Icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-      <!--link collapse-->
+    <!--link collapse-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
 <body>
@@ -38,7 +36,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com/daimon.esloton/" target="_blank">
+                        <a href="https://www.facebook.com/nicodedeveloper" target="_blank">
                             <i class="fab fa-facebook-f"></i>
                             <span><i class="fab fa-facebook-f"></i></span>
                         </a>
@@ -50,7 +48,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://twitter.com/DaimonEsloton" target="_blank">
+                        <a href="https://github.com/nicodesn" target="_blank">
                             <i class="fab fa-github"></i>
                             <span><i class="fab fa-github"></i></span>
                         </a>
@@ -61,98 +59,50 @@
     </header>
     <main>
         <section id="main">
-            <div class="container">
-                <div class="row about-coluna">
-                    <div class="col-md-8">
+            <div class="main-coluna">
+                <div class="content-about">
+                    <div class="coluna">
                         <p class="text-blur-out">Oi, meu nome é</p>
-                        <div class="col align-self-start">
-                            <h2 class="big-heading">Samuel  Nicolau.</h2>
-                        </div>
-                        <div class="col align-self-start">
-                            <h2 class="big-heading">Eu sou desenvolvedor Web.</h2>
-                        </div>
-                        <div class="col about-me">
-                            <p>
-                                Sou um engenheiro de software especializado em dar vida às ideais na internet e projetando melhores experiências digitais.
-                                Atualmente, estou focado na construção de sites.
-                            </p>
-                        </div>
+                        <h2 class="big-heading text-chegando">Samuel  Nicolau.</h2>
+                        <h2 class="sub-heading">Front-End Developer.</h2>
+                        <p>
+                            Sou um engenheiro de software especializado em dar vida às ideais na internet e projetando melhores experiências digitais.Atualmente, estou focado na construção de sites.
+                        </p>
+                        <br>
                         <div class="btn-animado">
                             <a href="#">Resumo</a>
                         </div>
                     </div>
-                    <div id="profile-foto" class="col">
-                        <img class="img-user" src="assets/img/heidy.png" alt="">
-                    </div>
+                </div>
+                <div class="coluna profile-foto">
+                    <img class="img-user" src="assets/img/heidy.png" alt="">
                 </div>
             </div>
         </section>
         <section id="about">
-            <div class="container">
-                <div class="col-12">
-                    <h1 class="main-title">Quem é Samuel <span>.</span></h1>
+            <h1 class="main-title">Quem é Samuel <span>.</span></h1>
+            <div class="main-coluna">
+                <div class="coluna content-about">
+                    <p>
+                        Samuel ou Nicodesn como preferir é um Freelancer Front-End Developer, comecei na carreira de desenvolvedor web no ano de 2021, tão recente é? Mas venho preenchendo as lacunas das minhas habilidades nos aprendizados adquirido dia após dia. Com os meus olhares aguçados venho treinando também sobre design para envolver completamente o usuário no mundo digital.
+                    </p>
                 </div>
-                <div class="content-columns">
-                    <article class="colunas">
-                        <p>
-                            Samuel ou "Nicodesn" é um estudante de Tecnologias e inovações, todo o seu interesse por esta área deve se pelo fato de gostar de expressar as suas ideias por intermédio da tecnologia que é o melhor meio para ele expressar os seus sentimentos e compartilhar com o mundo.  Aspiro a uma carreira que me permita canalizar minha criatividade através da criação de belos softwares e experiências envolventes.
-                        </p>
-                    </article>
-                    <div class="colunas">
-                        <img class="img-user" src="assets/img/heidy.png" alt="samuel nicolau" title="Samuel Nicolau">
-                    </div>
+                <div class="coluna profile-foto">
+                    <img class="img-user" src="assets/img/heidy.png" alt="samuel nicolau" title="Samuel Nicolau">
                 </div>
             </div>
         </section>
         <!--Conhecimentos-->
         <section id="skills-area">
-            <div class="col-12">
-                <h1 class="main-title">Conhecimentos<span>.</span></h1>
-            </div>
+            <h1 class="main-title">Conhecimentos<span>.</span></h1>
             <div class="wrapper">
-                <input type="radio" name="slider" checked id="btn-html">
-                <input type="radio" name="slider" id="btn-css">
-                <input type="radio" name="slider" id="btn-js">
-                <input type="radio" name="slider" id="btn-bs">
-                <nav>
-                    <label for="btn-html" class="btn-html">Html</label>
-                    <label for="btn-css" class="btn-css">Css</label>
-                    <label for="btn-js" class="btn-js">JavaScript</ion-icon></label>
-                    <label for="btn-bs" class="btn-bs">Boostrap</label>
-                    <div class="slider"></div>
-                </nav>
-                <article>
-                    <div class="content content-1">
-                        <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML" target="_blank">
-                            HTML é uma linguagem na qual a maioria dos sites são escritos . HTML é usado para criar páginas e torná-las funcionais.
-                        </a>
-                    </div>
-                    <div class="content content-2">
-                        <a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" target="_blank">
-                            CSS é a linguagem usada para estilizar a apresentação visual das páginas da web. Ela tem o objetivo de dizer aos navegadores da web como renderizar as diferentes partes de uma página da web.
-                        </a>
-                    </div>
-                    <div class="content content-3">
-                       <a href="https://developer.mozilla.org/pt-BR/docs/Glossary/JavaScript" target="_blank">
-                            "JavaScript é uma linguagem de programação, leve, interpretada, orientada a objetos, baseada em protótipos e em first-class functions (funções de primeira classe), mais conhecida como a linguagem de script da Internet."
-                            <br>
-                            Ela pode ser executada em navegadores e manipular comportamentos de páginas web.
-                        </a>
-                    </div>
-                    <div class="content content-4">
-                        <a href="https://getbootstrap.com/" target="_blank">
-                            Bootstrap é um framework CSS - uma coleção de ferramentas HTML, CSS e JavaScript para criar e construir páginas da web e aplicativos da web responsivos e mobile-first. É um framework gratuito e de código aberto, hospedado no GitHub e originalmente criado para o Twitter.
-                        </a>
-                    </div>
-                </article>
+                <span class="Esfera"></span>
             </div>
         </section>
         <!--Serviços-->
         <section id="service-area">
-            <div class="col 12">
-                <h1 class="main-title">Serviços <span>.</span></h1>
-            </div>
             <div class="containerMax">
+                <h1 class="main-title">Serviços <span>.</span></h1>
                 <div class="box-service">
                     <ion-icon name="laptop-outline"></ion-icon>
                     <h4>Desenvolvimento</h4>
@@ -174,11 +124,7 @@
         </section>
         <!--projetos-->
         <section id="works">
-            <div class="col-12">
-                <h1 class="main-title">
-                    Projetos<span>.</span>
-                </h1>
-            </div>
+            <h1 class="main-title">Projetos<span>.</span></h1>
             <div class="btn-links-project arquivo">
                 <div class="btn-animado">
                     <a href="sotao/sota.html">Sótão</a>
@@ -235,7 +181,7 @@
             </div>
         </section>
         <div class="myemail">
-            <a href="mailto:muambalas@gmail.com">muambalas@gmail.com</a><hr>
+            <a href="mailto:muambalas@gmail.com">muambalas@gmail.com</a>
         </div>
         <footer>
             <ul class="nav-list-social">
@@ -274,12 +220,39 @@
     </main>
     <div class="cursor"></div>
     <script src="assets/js/index.js"></script>
-    <script
-    src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-    crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <!-- Incluindo a CDN do script TagCloud.js no documento -->
+    <script src="https://cdn.jsdelivr.net/npm/TagCloud@2.2.0/dist/TagCloud.min.js"></script>
+    <!--Criar uma esfera de texto rotativa 3D-->
+    <script>
+        const Texto = [
+            'HTML', 'CSS', 'JAVASCRIPT',
+            'Loading', 'Loading', 'Loading',
+            'PYTHON', 'Loading',
+            'Loading', 'BOOSTRAP', 'Loading',
+            'Loading', 'Loading', 'Loading', 'Loading'
+        ];
+
+        var tagCloud = TagCloud('.Esfera', Texto, {
+
+            // Raio da esfera em px
+            radius: 220, 
+
+            // velocidade da animação
+            // Lento, Normal, Rápido
+            maxSpeed: 'normal',
+            initSpeed: 'fast',
+
+            // Direção da rotaçaõ topo 0, esquerda 90, direita baixo 135
+            direction: 135,
+
+            // interação com o mouse ou não por padrão é verdadeiro, desacelerar para a velocidade inicial, e continuar a rolar com o mouse
+            keep: true
+
+        });
+
+        var color = '#fabd21';
+        document.querySelector('.Esfera').style.color = color;
+    </script>
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/aa9ee0dfae.js" crossorigin="anonymous"></script>
     <!--Ion-icons-->
