--- a/assets/portfolio/portfolio.html
+++ b/assets/portfolio/portfolio.html
@@ -63,7 +63,7 @@
             <h1 class="main-title">Projetos<span>.</span></h1>
             <div class="btn-links-project arquivo">
                 <div class="btn-animado">
-                    <a href="sotao/sota.html">Sótão</a>
+                    <a href="../sotao/sota.html">Sótão</a>
                 </div>
             </div>
             <div class="containerMax">
@@ -75,9 +75,9 @@
                             colors="primary:#fabd21,secondary:#fabd21"
                             style="width:75px;height:75px">
                         </lord-icon>
-                        <h1 class="title-project">
+                        <!--<h1 class="title-project">
                             Indisponível
-                        </h1>
+                        </h1>-->
                     </div>
                     <p>
                         Trabalhando nisso, desculpe! Pouco em breve estará disponivel.
@@ -91,9 +91,9 @@
                             colors="primary:#fabd21,secondary:#fabd21"
                             style="width:75px;height:75px">
                         </lord-icon>
-                        <h1 class="title-project">
+                        <!--<h1 class="title-project">
                             Indisponível
-                        </h1>
+                        </h1>-->
                     </div>
                     <p>
                         Trabalhando nisso, desculpe! Pouco em breve estará disponivel.
@@ -107,9 +107,9 @@
                             colors="primary:#fabd21,secondary:#fabd21"
                             style="width:75px;height:75px">
                         </lord-icon>
-                        <h1 class="title-project">
+                        <!--<h1 class="title-project">
                             Indisponível
-                        </h1>
+                        </h1>-->
                     </div>
                     <p>
                         Trabalhando nisso, desculpe! Pouco em breve estará disponivel.
