--- a/index.html
+++ b/index.html
@@ -73,10 +73,18 @@
                     </div>
                 </div>
                 <div class="box-coluna">
+                    <img src="assets/img/imagMobile.jpg" alt="Samuel Nicolau">
+                </div>
+                <div class="box-coluna">
                     <h1 class="main-title">Quem é Samuel <span>.</span></h1>
                     <p>
                         Samuel é um Freelancer Front-End Developer, comecei na carreira de desenvolvedor web no ano de 2021 venho desenvolvendo as minhas habilidades nos aprendizados adquirido dia após dia. Com os meus olhares aguçados venho treinando também sobre design para envolver completamente o usuário no mundo digital.
                     </p>
+                </div>
+            </div>
+            <div class="boxImag">
+                <div class="imagMobile">
+                    <img src="assets/img/nicode.png">
                 </div>
             </div>
         </section>
@@ -95,8 +103,8 @@
         </section> -->
         <!--Serviços-->
         <section id="service-area">
+            <h1 class="main-title">Serviços <span>.</span></h1>
             <div class="containerMax">
-                <h1 class="main-title">Serviços <span>.</span></h1>
                 <div class="box-service">
                     <div class="head-box">
                         <lord-icon
@@ -105,7 +113,7 @@
                             colors="primary:#e4e4e4,secondary:#fabd21"
                             style="width:75px;height:75px">
                         </lord-icon>
-                        <h1 class="title-project">Desenvolvimento</h1>
+                        <h1 class="title-project">Criação</h1>
                     </div>
                     <p>Desenvolvo de sites profissionais, blogs, portfólios, landing pages e e-commerce.</p>
                 </div>
@@ -129,7 +137,7 @@
                             colors="primary:#e4e4e4,secondary:#fabd21"
                             style="width:75px;height:75px">
                         </lord-icon>
-                        <h1 class="title-project">Desgner</h1>
+                        <h1 class="title-project">Designer</h1>
                     </div>
                     <p>
                         Desenho interface de forma que ela seja clara, objetiva e principalmente intuitiva para o usuário.
@@ -205,7 +213,7 @@
     <script src="https://cdn.lordicon.com/xdjxvujz.js"></script>
     <script>
         var typed = new Typed(".auto-type", {
-            strings: ["HTML", "css", "javascript", "python", "git", "github"],
+            strings: ["HTML", "css", "javascript", "python", "Boostrap", "git", "github"],
             typeSpeed: 150,
             backSpeed: 150,
             loop: true
