--- a/assets/sotao/sota.html
+++ b/assets/sotao/sota.html
@@ -10,7 +10,7 @@
      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="shortcut icon" href="../assets/img/samuel.ico" type="image/x-icon">
     <title>Samuel Nicolau | Desenvolvedor Front End</title>
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <!-- Fonte Icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
       <!--link collapse-->
@@ -18,16 +18,16 @@
 </head>
 <body>
     <header>
-        <a href="../index.html"><img class="logo" src="../assets/img/logo.jpg" alt="logo-name"></a>
+        <a href="../index.html"><img class="logo" src="../img/logo.jpg" alt="logo-name"></a>
         <div aria-controls="menu-toggle" aria-expanded="false" class="btn-mobile">
             <span class="line" aria-expanded="false"></span>
         </div>
         <nav>
             <div id="menu-toggle" class="nav-list" data-visible="false">
                 <ol class="nav-ol-list">
-                    <li><a href="#about" aria-hidden="true">Sobre</a></li>
+                    <li><a href="../../index.html" aria-hidden="true">Sobre</a></li>
                     <li><a href="#service" aria-hidden="true">Projetos</a></li>
-                    <li><a href="#portfolio" aria-hidden="true">Portfólio</a></li>
+                    <li><a href="../portfolio/portfolio.html" aria-hidden="true">Portfólio</a></li>
                     <li><a href="#contact" aria-hidden="true">Contatos</a></li>
                 </ol>
                 <ul class="nav-list-social">
@@ -61,13 +61,11 @@
     </header>
     <main>
         <section id="sota-area">
-            <div class="col-12">
-                <h1 class="main-title">
-                    Sótão<span>.</span>
-                    <p>É aqui no meu Sótão onde guardo os links de outros projetos.</p>
-                </h1>
-            </div>
-            <div class="container">
+            <h1 class="main-title">
+                Sótão<span>.</span>
+                <p>É aqui no meu Sótão onde guardo os links de outros projetos.</p>
+            </h1>
+            <div class="containerMax">
                 <table>
                     <thead>
                         <tr>
@@ -141,14 +139,7 @@
             </div>
         </footer>
     </main>
-    <div class="cursor"></div>
-    <script src="../assets/js/index.js"></script>
-    <script
-    src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-    crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="../js/index.js"></script>
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/aa9ee0dfae.js" crossorigin="anonymous"></script>
     <!--Ion-icons-->
