--- a/assets/portfolio/portfolio.html
+++ b/assets/portfolio/portfolio.html
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div class="containerMax">
-                <article class="project-body">
+                <div class="project-body">
                     <div class="head-box">
                         <lord-icon
                             src="https://cdn.lordicon.com/xjovhxra.json"
@@ -82,8 +82,8 @@
                     <p>
                         Trabalhando nisso, desculpe! Pouco em breve estará disponivel.
                     </p>
-                </article>
-                <article class="project-body">
+                </div>
+                <div class="project-body">
                     <div class="head-box">
                         <lord-icon
                             src="https://cdn.lordicon.com/xjovhxra.json"
@@ -98,8 +98,8 @@
                     <p>
                         Trabalhando nisso, desculpe! Pouco em breve estará disponivel.
                     </p>
-                </article>
-                <article class="project-body">
+                </div>
+                <div class="project-body">
                     <div class="head-box">
                         <lord-icon
                             src="https://cdn.lordicon.com/xjovhxra.json"
@@ -114,7 +114,55 @@
                     <p>
                         Trabalhando nisso, desculpe! Pouco em breve estará disponivel.
                     </p>
-                </article>
+                </div>
+                <div class="project-body">
+                    <div class="head-box">
+                        <lord-icon
+                            src="https://cdn.lordicon.com/xjovhxra.json"
+                            trigger="loop"
+                            colors="primary:#fabd21,secondary:#fabd21"
+                            style="width:75px;height:75px">
+                        </lord-icon>
+                        <!--<h1 class="title-project">
+                            Indisponível
+                        </h1>-->
+                    </div>
+                    <p>
+                        Trabalhando nisso, desculpe! Pouco em breve estará disponivel.
+                    </p>
+                </div>
+                <div class="project-body">
+                    <div class="head-box">
+                        <lord-icon
+                            src="https://cdn.lordicon.com/xjovhxra.json"
+                            trigger="loop"
+                            colors="primary:#fabd21,secondary:#fabd21"
+                            style="width:75px;height:75px">
+                        </lord-icon>
+                        <!--<h1 class="title-project">
+                            Indisponível
+                        </h1>-->
+                    </div>
+                    <p>
+                        Trabalhando nisso, desculpe! Pouco em breve estará disponivel.
+                    </p>
+                </div>
+                <div class="project-body">
+                    <div class="head-box">
+                        <lord-icon
+                            src="https://cdn.lordicon.com/xjovhxra.json"
+                            trigger="loop"
+                            colors="primary:#fabd21,secondary:#fabd21"
+                            style="width:75px;height:75px">
+                        </lord-icon>
+                        <!--<h1 class="title-project">
+                            Indisponível
+                        </h1>-->
+                    </div>
+                    <p>
+                        Trabalhando nisso, desculpe! Pouco em breve estará disponivel.
+                    </p>
+                </div>
             </div>
             <div class="btn-links-project arquivo">
                 <div class="btn-animado">
