--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
                             colors="primary:#e4e4e4,secondary:#fabd21"
                             style="width:75px;height:75px">
                         </lord-icon>
-                        <h1 class="title-project">Criação</h1>
+                        <h1 class="title-project">Desenvolvimento</h1>
                     </div>
-                    <p>Desenvolvo de sites profissionais, blogs, portfólios, landing pages e e-commerce.</p>
+                    <p>Desenvolvimento de sites profissionais, blogs, portfólios, landing pages e e-commerce.</p>
                 </div>
                 <div class="box-service">
                     <div class="head-box">
